# Molecular-Dynamics-Program-for-Lennard-Jones-Potential-3D-Gravity-and-Bouncy-Walls-

./: AccumProps.c  AccumProps.h  AllocArrays.c  AllocArrays.h  ApplyBoundaryCond.c  ApplyBoundaryCond.h  CMakeLists.txt  ComputeForces.c  ComputeForces.h  EvalProps.c  EvalProps.h  GetNameList.c  GetNameList.h  InitAccels.c  InitAccels.h  InitCoords.c  InitCoords.h  InitVels.c  InitVels.h  LeapfrogStep.c  LeapfrogStep.h  Notes  PlotCoords.R  PrintNameList.c  PrintNameList.h  PrintSummary.c  PrintSummary.h  README  SetParams.c  SetParams.h  SetupJob.c  SetupJob.h  SingleStep.c  SingleStep.h  VRand.c  a.out  build.bash  extern_global_variables.h  global_variables.h  macros_and_typedef.h  (+7 more)
zr_videos/: a.params
zv_Coords_Images/: makeVideo.bash  mylist.txt
zx_InitVels/: 0  PlotVels.R
zz_testing/: temp  zu_run_all_necessary_bash_files.bash  zv_creat_directories_from_zw.bash  zw_cleaned_cpp_files_list.txt  zx_clean_zy_from_extension_and_parent_dir.bash  zy_cpp_files_list_not_cleaned.txt  zz_get_cpp_files_for_testing.bash
zz_testing/VRand_c/: VRand.c  VRand.h  a.out  build.bash  global.h  main.c
